# nprozubi

./: .gitmodules  .tmp.txt  Makefile.am  configure.ac  out.rtf
src/: Makefile.am  askindex.h  askstring.h  asktoexit.h  asktoremove.h  calendar.h  caseslist.h  colors.h  combobox.h  config.h  dialog.h  error.h  fileselect.h  helpers.h  imageslist.h  ini.h  keybar.h  main.c  main.h  nomenklatura.h  patientedit.h  patientslist.h  planlecheniya.h  planlecheniyaedit.h  priceedit.h  pricesget.h  priceslist.h  strio.h  switcher.h  textview.h  zubformula.h
